ajuste nas animations welcome e social icons

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                Os direitos estão reservados a Melvin Jhones Banda
             </p>
             <p>
-                Site desenvolvido por <a href="http://"></a>
+                Site desenvolvido por <a href="http://thiagocsantos.com.br">@thiagocsantos</a>
             </p>
         </footer>
 </body>
